Kubernetes/manifests/ingress-controller/http-ingress/http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  labels:
    app: nginxlabel
spec:
  ingressClassName: contour
  rules:
    - host: danhtesting.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-service
                port:
                  number: 80
